fixed overflow issue on safari(maybe)

--- a/styles/general.css
+++ b/styles/general.css
@@ -42,6 +42,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
 }
 
 .section-3 {
@@ -67,7 +68,6 @@ body {
   justify-content: center;
   height: 75vh;
   width: 50vw;
-  min-width: 400px;
   border-radius: 4rem;
   padding: 0 30px;
   transition: background-color 1s;
@@ -78,8 +78,9 @@ body {
 }
 
 .about-me-img {
-  height: 75vh;
+  height: 60vh;
   width: 400px;
+  flex-shrink: 0;
   object-fit: cover;
   border-radius: 4rem;
 }
